# arvo

./: .gitignore  README.md
docs/: DESIGN.md  (+16 more)
mock/: Cargo.toml  DESIGN.md.tmpl  PRINCIPLES.md.tmpl  WORKFLOW.md.tmpl  mockspace.toml
mock/agent/: MAIN.md.tmpl  POSTAMBLE.md.tmpl  PREAMBLE.md.tmpl  config.toml
mock/agent/hooks/: arvo-bits-traits-only-guard.sh.tmpl  no-alloc-guard.sh.tmpl  no-bare-primitive-guard.sh.tmpl  no-dyn-guard.sh.tmpl  no-platform-dep-guard.sh.tmpl  no-std-guard.sh.tmpl
mock/agent/rules/: cargo.md.tmpl  cookbook.md.tmpl  implementation.md.tmpl  no-heap.md.tmpl  type-surface.md.tmpl  writing-style.md.tmpl
mock/benches/: .gitignore  Cargo.toml  bench.toml
mock/benches/src/: lib.rs  main.rs
mock/crates/arvo/: BACKLOG.md.tmpl  Cargo.toml  DEEPDIVE_newtype-deref.md.tmpl  DEEPDIVE_strategy-bound-trilemma.md.tmpl  DESIGN.md.tmpl  README.md.tmpl  build.rs
mock/crates/arvo-bitmask/: BACKLOG.md.tmpl  Cargo.toml  DESIGN.md.tmpl  README.md.tmpl
mock/crates/arvo-bits/: BACKLOG.md.tmpl  Cargo.toml  DESIGN.md.tmpl  README.md.tmpl
mock/crates/arvo-bits-contracts/: BACKLOG.md.tmpl  Cargo.toml  DESIGN.md.tmpl  README.md.tmpl  SHAME.md.tmpl
mock/crates/arvo-comb/: BACKLOG.md.tmpl  Cargo.toml  DESIGN.md.tmpl  README.md.tmpl
mock/crates/arvo-graph/: BACKLOG.md.tmpl  Cargo.toml  DESIGN.md.tmpl  README.md.tmpl
mock/crates/arvo-hash/: BACKLOG.md.tmpl  Cargo.toml  DESIGN.md.tmpl  README.md.tmpl
mock/crates/arvo-mask-contracts/: BACKLOG.md.tmpl  Cargo.toml  DESIGN.md.tmpl  README.md.tmpl
mock/crates/arvo-narrow/: BACKLOG.md.tmpl  Cargo.toml  DESIGN.md.tmpl  README.md.tmpl
mock/crates/arvo-narrow-contracts/: BACKLOG.md.tmpl  Cargo.toml  DESIGN.md.tmpl  README.md.tmpl
mock/crates/arvo-numeric-contracts/: BACKLOG.md.tmpl  Cargo.toml  DESIGN.md.tmpl  README.md.tmpl
mock/crates/arvo-sparse/: BACKLOG.md.tmpl  Cargo.toml  DESIGN.md.tmpl  README.md.tmpl
mock/crates/arvo-spectral/: BACKLOG.md.tmpl  Cargo.toml  DESIGN.md.tmpl  README.md.tmpl
mock/crates/arvo-storage/: BACKLOG.md.tmpl  Cargo.toml  DESIGN.md.tmpl  README.md.tmpl
mock/crates/arvo-strategy/: BACKLOG.md.tmpl  Cargo.toml  DESIGN.md.tmpl  README.md.tmpl
mock/crates/arvo-tensor/: BACKLOG.md.tmpl  Cargo.toml  DESIGN.md.tmpl  README.md.tmpl
mock/crates/arvo-transparent/: BACKLOG.md.tmpl  Cargo.toml  DESIGN.md.tmpl  README.md.tmpl
mock/design_rounds/: 202603241400_topic.arvo-crate-dependency-revision.md  202604191900_changelist.doc.lock.md  202604192000_changelist.src.md  202604192200_changelist.src.deprecated.md  202604192300_changelist.src.md  202604200100_changelist.doc.md  202604200935_changelist.doc.md  202604201000_topic.arvo-identity-fixed-point-first.md  202604201005_changelist.doc.md  202604201338_changelist.doc.md  202604210000_changelist.doc.lock.md  202604220100_changelist.src.md  202604230000_changelist.doc.md  202604230100_changelist.src.lock.md  202604240100_changelist.src.lock.md  202604250000_changelist.doc.md  202604250100_changelist.src.md  202604260000_changelist.doc.lock.md  202604260000_changelist.doc.md  202604260100_changelist.src.md  202604260200_changelist.src.md  202604260300_changelist.doc.md  202604260600_changelist.src.lock.md  202604270000_changelist.src.md  202604271346_changelist.doc.md  202604271346_changelist.src.md  202604280000_changelist.doc.md  202604280034_changelist.doc.md  202604280034_changelist.src.md  202604280100_changelist.doc.lock.md  202604280100_changelist.src.md  202604280100_topic.arvo-graph-sweep.md  202604280300_changelist.src.lock.md  202604280500_changelist.doc.lock.md  202604280500_changelist.src.lock.md  202604280500_changelist.src.md  202604280500_topic.signed-bits-axis-and-bitwidth-cap-256.md  202604280841_topic.layout-soundness-gates.md  202604281000_changelist.doc.md  202604281000_changelist.src.md  (+21 more)
mock/design_rounds/202604191900/: .history  202603241200_topic.arvo-strategy-markers.md  202604192100_changelist.src.deprecated.md  202604192300_changelist.src.lock.md
mock/design_rounds/202604200100/: .history  202604200000_topic.arvo-bits-impl-strategy.md  202604200200_changelist.src.lock.md
mock/design_rounds/202604200354/: .history  202604200354_changelist.doc.lock.md  202604200400_changelist.src.lock.md
mock/design_rounds/202604200935/: .history  202604200930_topic.arvo-sweep-primitive-vocabulary.md  202604200940_changelist.src.lock.md
mock/design_rounds/202604201005/: .history  202604201000_topic.arvo-identity-fixed-point-first.md  202604201005_changelist.doc.lock.md  202604201010_changelist.src.lock.md
mock/design_rounds/202604201338/: .history  202604201338_changelist.src.lock.md  202604201338_topic.arvo-hash-new-crate.md
mock/design_rounds/202604210000/: .history  202604210100_changelist.src.lock.md
mock/design_rounds/202604220000/: .history  202604220000_changelist.doc.lock.md
mock/design_rounds/202604230000/: .history
mock/design_rounds/202604240000/: .history  202604240000_changelist.doc.lock.md
mock/design_rounds/202604250000/: .history  202604250000_changelist.doc.lock.md
mock/design_rounds/202604260000/: .history  202604260200_changelist.src.lock.md
mock/design_rounds/202604260300/: .history  202604260400_changelist.src.lock.md
mock/design_rounds/202604260500/: .history  202604260500_changelist.doc.lock.md
mock/design_rounds/202604270000/: .history  202604270000_changelist.doc.lock.md  202604270000_changelist.src.lock.md  202604270000_topic.arvo-bitmask-sweep.md
mock/design_rounds/202604271346/: .history  202604271346_topic.const-traits-and-arvo-as-facade.md  202604500000_topic.foundations-restructure-final.md
mock/design_rounds/202604280000/: .history  202604280000_changelist.src.lock.md  202604280000_topic.arvo-comb-sweep.md
mock/design_rounds/202604280034/: .history  202604280034_changelist.doc.lock.md  202604280034_changelist.src.deprecated.md  202604280034_changelist.src.lock.md  (+1 more)
mock/lints/: arvo_bits_traits_only.rs  no_alloc_enforcer.rs  no_dynamic_dispatch.rs  no_runtime_grow.rs  no_std_enforcer.rs  strategy_marker_required.rs
mock/research/: README.md  strategy-bound-trilemma.md
(+196 files in other folders)
