[workspace]
resolver = "2"
members = [
    # L0 — numeric primitives, strategy markers
    "crates/arvo",
    # L1 — bit-level contracts
    "crates/arvo-bits",
    # L2 — built on contracts
    "crates/arvo-bitmask",
    "crates/arvo-sparse",
    "crates/arvo-graph",
    "crates/arvo-comb",
    # L3 — built on L2 substrate
    "crates/arvo-spectral",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"

[workspace.dependencies]
mockspace = { git = "ssh://git@github.com/hiisi-digital/mockspace.git", branch = "main" }
arvo = { path = "crates/arvo" }
arvo-bits = { path = "crates/arvo-bits" }
arvo-bitmask = { path = "crates/arvo-bitmask" }
arvo-graph = { path = "crates/arvo-graph" }
arvo-sparse = { path = "crates/arvo-sparse" }
arvo-spectral = { path = "crates/arvo-spectral" }
arvo-comb = { path = "crates/arvo-comb" }
