[package]
name = "arvo-benches"
version = "0.0.0"
edition = "2024"
publish = false

[lib]
name = "arvo_benches"
path = "src/lib.rs"

[[bin]]
name = "arvo-benches"
path = "src/main.rs"

[dependencies]
mockspace-bench-core = { git = "ssh://git@github.com/hiisi-digital/mockspace.git", branch = "dev", features = ["std"] }
mockspace-bench-harness = { git = "ssh://git@github.com/hiisi-digital/mockspace.git", branch = "dev" }
