[package]
name = "arvo-bits"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
arvo-storage.workspace = true
arvo-strategy.workspace = true
arvo-bits-contracts.workspace = true

[dev-dependencies]
arvo.workspace = true

[build-dependencies]
mockspace.workspace = true

[features]
default = []
