[package]
name = "arvo-hash"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
arvo.workspace = true
xxhash-rust = { version = "0.8", default-features = false, features = ["xxh3", "const_xxh3"] }

[build-dependencies]
mockspace.workspace = true

[features]
default = []
