[package]
name = "arvo-narrow"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
notko.workspace = true
arvo-storage.workspace = true
arvo-bits-contracts.workspace = true
arvo-mask-contracts.workspace = true
arvo-bitmask.workspace = true

[build-dependencies]
mockspace.workspace = true

[features]
default = []
