[package]
name = "arvo-storage"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
notko.workspace = true
arvo-transparent.workspace = true
arvo-strategy.workspace = true

[build-dependencies]
mockspace.workspace = true

[features]
default = []

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(arvo_full_layout_audit)"] }
