[package]
name = "arvo"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
notko.workspace = true
arvo-transparent.workspace = true
arvo-strategy.workspace = true

[dev-dependencies]
trybuild = "1"

[build-dependencies]
mockspace.workspace = true

[features]
default = []
